# hyphae

./: .gitignore  GAPS.md  LICENSE  README.md  create_startup.ps1  ingest.py  pyproject.toml  start_server.py
src/hyphae/: __init__.py  cluster.py  converse.py  curate.py  embed.py  gaps.py  hyphae_types.py  mcp_server.py  river.py  server.py  shard.py  tower_api.py  tower_hook.py  towers.py  types.py
